k8s/overlays/minikube/delete-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: os-health-check
  namespace: os-health-check
$patch: delete
